# axum-template

./: Cargo.toml  Dockerfile
.github/workflows/: publish.yml
src/: error.rs  main.rs
