[package]
name = "axum-template"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
dotenvy = "0.15.7"
log = "0.4.27"
serde = { version = "1.0.228", features = ["derive"] }
snafu = "0.8.6"
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }